# Agent_experiment

./: .gitignore  APIKey.env  API_CHAT_DOC.md  API_CHAT_FRONTEND_PLAYBOOK.md  LICENSE  README.md  article.md  docker-compose.yml  long_running_application_anthropic.md  pyproject.toml  test_out_adv.txt  test_out_adv2.txt  test_out_adv2_utf8.txt  test_out_adv_utf8.txt  test_out_ult.txt  test_out_ult_utf8.txt  workspace.env
.claude/: AGENT_FIRST_WORKFLOW_GUIDE.md  BACKEND_ACTION_ENFORCEMENT.md  BACKEND_STATE_SCHEMA_PROPOSAL.md  HARNESS_ROADMAP.md  NODE_CONTRACTS.md  PROJECT_HARNESS_PHILOSOPHY.md  SINGLE_STEP_EXECUTION_LOOP.md  STATE_MACHINE_CONTRACT.md  VALIDATION_EVIDENCE_SCHEMA.md  settings.local.json
long_memory/chroma_db/: chroma.sqlite3
src/agent/: state.py
src/api/: main.py
src/code_indexer/: ast_checker.py  call_graph_visitor.py  code_search.py  get_workspace_skeleton.py  project_graph_manager.py  vector_store.py  work_space_indexer.py  workspace_models.py
src/config/: env_setting.py  workspace_config.py
src/llm/: llm_requirements_client.py  openai_client.py  openai_client_normal.py
src/memory/: checkpoint_manager.py  chroma_client.py
src/run/: run_agent.py  test_ new_llm.py  test_agent.py  test_api_connection.py  test_api_integration.py  test_chroma.py  test_chroma_native.py  test_code_indexer.py  test_coder_node.py  test_llm_node.py  (+11 more)
tests/: ERROR_NODE_TEST_GUIDE.md  test_action_policy.py  test_approval_flow.py  test_chat_node.py  test_error_flow.py  test_extract_requirements.py  test_node_contract.py  test_planner_node.py  test_state_persistence.py
(+61 files in other folders)
